# python-parser

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  example.py  if-statements.py  main.cpp  test.py  utility.sh
src/: ast.hpp  lexical.cpp  lexical.hpp  main.cpp  parser.cpp  parser.hpp  token.hpp
src/backend/: bytecode.cpp  bytecode.hpp  objects.hpp  value.hpp  vm.cpp  vm.hpp
src/frontend/: ast.hpp  lexical.cpp  lexical.hpp  parser.cpp  parser.hpp  token.hpp
src/print/: ast_tree.hpp  python_byte.hpp
test-suite/: bool.py  test-bytecode.py  test-lambda.py  test_conditionals.py  test_exceptions.py  test_match.py
test-suite/ast/: test_array.py  test_loops.py
test-suite/bytecode/: branch.py  condition.py  function.py  math.py  test.py
test-suite/vm/: basic.py
